@@ -1,13 +1,13 @@
 #! ${SH}
 #
-# $Id: pkg_tarup,v 1.6 2002/10/07 14:43:08 hubertf Exp $
+# $Id: pkg_tarup,v 1.7 2002/10/14 15:28:43 hubertf Exp $
 #
 # Tar up installed package
 #
 # (c) Copyright 2000-2002 Hubert Feyrer <hubert@feyrer.de>
 #
 
-PATH=/sbin:/usr/sbin:/bin:/usr/bin:${PREFIX}/sbin:${PREFIX}/bin
+PATH=/sbin:/usr/sbin:/bin:/usr/bin:${PREFIX}/sbin:${PREFIX}/bin:${PKG_TOOLS_BIN}
 
 if [ `${ID} -u` != 0 ]; then
 	${ECHO} "Becoming root@`/bin/hostname` to create a binary package"
